Conflicts: 	assets/sass/base/_elements.scss 	assets/sass/base/_functions.scss 	assets/sass/base/_helpers.scss 	assets/sass/base/_mixins.scss 	assets/sass/base/_typography.scss 	assets/sass/base/_vars.scss 	assets/sass/components/_messages.scss 	assets/sass/layout/_footer.scss 	assets/sass/layout/_global.scss 	assets/sass/layout/_nav.scss

--- a/assets/sass/base/_functions.scss
+++ b/assets/sass/base/_functions.scss
@@ -1,17 +1,16 @@
-/**
- * @file
- * Theme functions
- */
+///
+// @file
+// Theme functions
+///
 
-/**
- * Spacing Unit
- *
- * Interact with the spacing unit
- * @param 
- *  - $size: either empty, or a fraction
- * @return 
- *  - pixel value
- */
+///
+// Spacing Unit
+//
+// Interact with the spacing unit
+//
+// @param $size
+// @return px value
+///
 @function spacing-unit($size: $base-spacing-unit) {
   @if $size == $base-spacing-unit {
     @return $size;
@@ -20,15 +19,19 @@
   }
 }
 
-/**
- * Color
- *
- * Interact with the color map
- * @param
- *  - $key: color map key
- * @return
- *  - color hex
- */
+// Shortcut
+@function su($size: $base-spacing-unit) {
+  @return spacing-unit($size);
+}
+
+///
+// Color
+//
+// Interact with the color map
+//
+// @param $key
+// @return color hex
+///
 @function color($key) {
   @return map-get($colors, $key);
 }
