--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -5,7 +5,8 @@
  * Any naked typography elements, and their modifying / state class names.
  */   
 
-// Headings
+
+/* Headings */
 h1,h2,h3,h4,h5,h6 {}
 
 h1 { @include font-size($h1-size); }
@@ -15,5 +16,6 @@ h4 { @include font-size($h4-size); }
 h5 { @include font-size($h5-size); }
 h6 { @include font-size($h6-size); }
 
-// Paragraphs
+
+/* Paragraphs */
 p {}
