--- a/assets/sass/base/_elements.scss
+++ b/assets/sass/base/_elements.scss
@@ -20,14 +20,16 @@ h1,h2,h3,h4,h5,h6,p,ol,ul {
   margin-top: 0;
 }    
 
-// Html and Body 
+
+/* Html and Body */
 body {
 	font-family: $font-family-serif;
   font-size: $base-font-size;
   line-height: $line-height-ratio;
 }
 
-// Links 
+
+/* Links */
 a {
 	text-decoration: none;
   transition: .2s ease background-color;
@@ -47,7 +49,8 @@ ol, ul {
   list-style: none;
 }
 
-// Media 
+
+/* Media */
 img {
   height: auto;
   max-width: 100%;
