--- a/assets/sass/layout/_global.scss
+++ b/assets/sass/layout/_global.scss
@@ -3,22 +3,23 @@
  * Global layout
  */
 
-// Site container
+
+/* Site container */
 .container {
-  @include clearfix;
-  margin: auto;
-  max-width: $site-width;
+  @include container;
   width: 90%;
 }
 
-// Site logo 
+
+/* Site logo */
 .site-logo {
   @include mq(lap) {
     float: left;
   }
 }
 
-// Site content + sidebar layout 
+
+/* Site content + sidebar layout */
 @include with-layout($main-layout) {
   @include mq(lap) {
     .main-content {
