--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,7 +1,7 @@
-///
+//
 // @file
 // Sass table of contents
-///
+//
 
 ///
 // If you want to use compass in your theme, install the gem
@@ -15,7 +15,7 @@
 
 // Vendor
 // Susy: http://susydocs.oddbird.net/en/latest/
-// Sass MQ: https://github.com/sass-mq/sass-mq
+// Sass MQ: http://sass-mq.github.io/sass-mq/
 @import 
   "vendor/susy/language/susy",
   "vendor/mq"
