clean up mixin comments

--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -7,10 +7,10 @@
 /// @author Drew Bolles
 ////
 
+
 /// Spit out 'rem' and 'px' font size in one go
 ///
 /// @access public
-///
 /// @param {int} $size - Size of font being passed in
 @mixin font-size($size: $base-font-size) {
   font-size: $size;
@@ -21,9 +21,7 @@
 /// Apply hover & focus at same time.
 ///
 /// @access public
-///
-/// @param {boolean} $active - Whether or not to apply to styles to an '.active'
-///                            class.
+/// @param {boolean} $active - Whether or not to apply styles to '.active'
 ///
 /// @content [Hover styles]
 @mixin hover($active: false) {
@@ -45,7 +43,6 @@
 /// Set bottom margin based on spacing unit
 ///
 /// @access public
-///
 /// @param {int} $multiplier - Integer to multiply base spacing unit by
 @mixin vr($multiplier: 1) {
   margin-bottom: $multiplier * $base-spacing-unit;
