--- a/assets/sass/components/_messages.scss
+++ b/assets/sass/components/_messages.scss
@@ -1,17 +1,15 @@
-/**
- * @file
- * Drupal Messages
- *
- * Styling of default drupal messages.
- *
- * @TODO rework names w/ preprocess function
- */
+//
+// @file
+// Drupal Messages
+//
+// Styling of default drupal messages.
+//
+// @TODO rework names w/ preprocess function
+//
 
 
-///
 // Config
-///
-
+// ==========================================================================
 $msg-status-bg: #42bd41;
 $msg-status-border: #259b24;
 
