--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
-/**
- * @file
- * Footer layout styles
- */
+//
+// @file
+// Footer layout styles
+//
 
 @if $use-sticky-footer == true {
   /* Sticky footer */
