--- a/assets/sass/layout/_nav.scss
+++ b/assets/sass/layout/_nav.scss
@@ -1,10 +1,10 @@
-/**
- * @file
- * Navigation styles
- *
- * Holds the main nav styles, as well as any global navigation throughout
- * the site. more specific nav patterns can be their own components.
- */
+//
+// @file
+// Navigation styles
+//
+// Holds the main nav styles, as well as any global navigation throughout
+// the site. more specific nav patterns can be their own components.
+//
 
 
 /* Nav element */
