--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -1,21 +1,17 @@
-////
-/// Theme mixins
-/// These are basic mixins that power the stylesheets by default. Feel free
-/// to add / remove any as needed. More specific mixins can go in the
-/// partials they effect.
-///
-/// @author Drew Bolles
-////
+//
+// @file
+// Theme mixins
+//
 
 
 /// Spit out 'rem' and 'px' font size in one go
 ///
 /// @access public
 ///
-/// @param {int} $size - Size of font being passed in
+/// @param {int} $size [$base-font-size] - Size of font being passed in
 @mixin font-size($size: $base-font-size) {
   font-size: $size;
-  font-size: $size / $base-font-size * 1rem; // 1rem;
+  font-size: $size / $base-font-size * 1rem;
 }
 
 
@@ -23,9 +19,7 @@
 ///
 /// @access public
 ///
-/// @param {boolean} $active - Whether or not to apply styles to '.active'
-///
-/// @content [Hover styles]
+/// @param {boolean} $active [false] - Whether or not to apply styles to '.active'
 @mixin hover($active: false) {
   @if($active == true) {
     &:hover,
@@ -46,9 +40,18 @@
 ///
 /// @access public
 ///
-/// @param {int} $multiplier - Integer to multiply base spacing unit by
-@mixin vr($multiplier: 1) {
-  margin-bottom: $multiplier * $base-spacing-unit;
+/// @param {int} $mult [1] - Integer to multiply base spacing unit by
+///
+/// @example scss
+///   .block {
+///     @include vr;
+///   }
+///
+///   .block-2 {
+///     @include vr(2);
+///   }
+@mixin vr($mult: 1) {
+  margin-bottom: $mult * $base-spacing-unit;
 }
 
 
@@ -56,6 +59,11 @@
 /// Applies micro clearfix to elements
 ///
 /// @access public
+///
+/// @example scss
+///   .block {
+///     @include clearfix;
+///   }
 @mixin clearfix() {
   &:after,
   &:before {
@@ -87,6 +95,7 @@
 /// Style placeholder text in one swoop
 ///
 /// @access public
+///
 /// @content [Placeholder styles]
 @mixin placeholder() {
   ::-webkit-input-placeholder {
