--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,9 +1,9 @@
-/**
- * @file
- * Typography styles
- *
- * Any naked typography elements, and their modifying / state class names.
- */   
+//
+// @file
+// Typography styles
+//
+// Any naked typography elements, and their modifying / state class names.
+//
 
 
 /* Headings */
