--- a/assets/sass/base/_vars.scss
+++ b/assets/sass/base/_vars.scss
@@ -1,144 +1,109 @@
-////
-/// Theme Sass variables
-/// @author Drew Bolles
-///
-/// Changing values and settings here will impact your CSS output. Use this
-/// file to house any variables that are globally necessary. If you have
-/// variables specific to certain partials, place them in those partials.
-////
+//
+// @file
+// Theme Sass variables
+//
 
+// Layout
+// ==========================================================================
 
-/// Vendor
-
-/// Normalize
-///
-/// @type Bool
-///
-/// @group Vendor
-$use-normalize: true;
-
-
-/// Layout
-
-/// Global
-///
-/// @type Int
-///
-/// @group Layout
+/// Max site width
 $site-width: 1200px;
 
-/// Sticky Footer
-///
-/// @type Bool
-///
-/// @group Layout
+/// Use the sticky footer component
 $use-sticky-footer: false;
 
-/// Sticky Footer Height
-///
-/// @type Int
-///
-/// @group Layout
+/// The height of the sticky footer, if used
 $footer-height: 150px;
 
 
-/// Responsive
+// Responsive
+// ==========================================================================
 
-/// Sass mq
-///
-/// @type Bool
-///
-/// @group Responsive
+/// Sass MQ variable
 $mq-responsive: true;
 
-/// Breakpoints
-///
-/// @group Responsive
-$bp-lap:  600px;
+/// Lap breakpoint size
+$bp-lap: 600px;
+
+/// Desktop breakpoint size
 $bp-desktop: 950px;
+
+/// Wide breakpoint size
 $bp-wide: 1050px;
+
+/// Full breakpoint size
 $bp-full: $site-width;
 
 /// MQ breakpoints map
-///
-/// @type Map
-///
-/// @group Responsive
 $mq-breakpoints: (
-  lap:  $bp-lap,
+  lap:      $bp-lap,
   desktop:  $bp-desktop,
-  wide: $bp-wide,
-  full: $site-width,
+  wide:     $bp-wide,
+  full:     $site-width,
 );
 
 
-/// Typography
+// Typography
+// ==========================================================================
 
 /// Base font size
-///
-/// @group Typography
 $base-font-size: 16px;
 
 /// Base line height
-///
-/// @group Typography
 $base-line-height: 24px;
 
 /// Line height ratio
-///
-/// @group Typography
 $line-height-ratio: $base-line-height / $base-font-size;
 
-/// Headings
-///
-/// @group Typography
+/// H1 size
 $h1-size: 36px;
+/// H2 size
 $h2-size: 30px;
+/// H3 size
 $h3-size: 24px;
+/// H4 size
 $h4-size: 20px;
+/// H5 size
 $h5-size: $base-font-size;
+/// H6 size
 $h6-size: 12px;
 
-/// Font weights
-///
-/// @group Typography
+/// Light font weight
 $font-weight-light: 300;
+/// Normal font weight
 $font-weight-normal: 400;
+/// Bold font weight
 $font-weight-semibold: 600;
 
-/// Font families
-///
-/// @group Typography
+/// Theme serif font
 $font-family-serif: Georgia, serif;
+/// Theme sans serif font
 $font-family-sans-serif: "Helvetica Neue", Helvetica, sans-serif;
+/// Base theme font
 $base-font-family: $font-family-sans-serif;
 
-/// Vertical rhythm
-///
-/// @group Typography | Layout
+/// Defines vertical rhythm
 $base-spacing-unit: $base-line-height;
 
 
 /// Map of theme colors
-///
-/// @type Map
-///
-/// @group Typography
 $colors: (
   grey: #ccc,
 );
 
 
-/// Susy variables
-///
-/// @group Susy
+// Susy
+// ==========================================================================
+
+/// Base Susy variables for theme
 $susy: (
   columns: 12,
   gutters: .25,
   container: $site-width,
+  use-custom: (
+    clearfix: true,
+  ),
 );
 
-/// Main layout
-///
-/// @group Susy
+/// The layout for the primary columns. Uses isolate to push / pull
 $main-layout: layout(12 .25 isolate);
