--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -43,7 +43,8 @@
 @import 
   "components/tabs",
   "components/messages",
-  "components/icons"
+  "components/icons",
+  "components/forms"
 ;
 
 // Pages
